# Mechanica

./: .gitignore  README.md  pyproject.toml  setup_native.py
.github/workflows/: tests.yml
docs/: FOCUS.md
examples/: analytical_structure.py  learn_spring_constant.py  native_robotics_benchmark.py  native_spring_benchmark.py  pendulum_lagrangian.py  pendulum_tvlqr.py  projectile_classical.py  two_link_kinematics.py  urdf_robotics.py
src/mechanica/: __init__.py  _native.py  analytical.py  classical.py  collision.py  constraints.py  control.py  diagnostics.py  dynamics.py  fit.py  integrators.py  kinematics.py  learning.py  rigid_body.py  robot_model.py  robotics.py  robotics_kinematics.py  spatial.py  trajectory.py
src/mechanica/native/: robotics.cpp  spring.cpp
tests/: test_analytical.py  test_classical.py  test_collision_constraints.py  test_constraints.py  test_control.py  test_dynamics.py  test_integrators.py  test_learning.py  test_native.py  test_native_compiled.py  test_rigid_body.py  test_robotics.py  test_robotics_kinematics.py  test_spatial_model.py  test_trajectory.py
