[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechanica"
version = "0.1.0"
description = "Differentiable analytical and classical mechanics in PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "vfxai" }
]
dependencies = [
  "torch>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.hatch.build.targets.wheel]
packages = ["src/mechanica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
