[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mechanica-torch"
version = "0.1.0"
description = "Differentiable mechanics, control, and robotics tools for PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Mohamed Elsayed" }
]
dependencies = [
  "torch>=2.0"
]

[project.urls]
Repository = "https://github.com/mohamedelsayed-0/Mechanica"
Issues = "https://github.com/mohamedelsayed-0/Mechanica/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]
native = [
  "ninja>=1.11",
  "setuptools>=68"
]

[tool.hatch.build.targets.wheel]
packages = ["src/mechanica"]

[tool.hatch.build.targets.wheel.force-include]
"src/mechanica/native/spring.cpp" = "mechanica/native/spring.cpp"
"src/mechanica/native/robotics.cpp" = "mechanica/native/robotics.cpp"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
